Remove sharing data between parent to child component

--- a/src/app/parent/child/child.component.html
+++ b/src/app/parent/child/child.component.html
@@ -1,4 +1,2 @@
 <p>child works!</p>
-<p style="font-size: 25px; color: royalblue; text-align: center">
-  {{ childInput }}
-</p>
+<p style="font-size: 25px; color: royalblue; text-align: center"></p>
